# automerge-cat

./: Cargo.toml  README.md
.github/workflows/: docs.yml
benches/: crdt_bench.rs
proptest-regressions/: oplog.txt  orset.txt  text.txt
src/: document.rs  error.rs  gcounter.rs  lib.rs  lww_register.rs  mvregister.rs  oplog.rs  orset.rs  pncounter.rs  replica.rs  rga.rs  session.rs  sync.rs  text.rs
tests/: serialization.rs
